# winitRPackage

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  configure  configure.win
.github/workflows/: R-CMD-check.yaml  build-server.yaml
R/: 000-wrappers.R  download-server.R  zzz.R
man/: download_server.Rd
src/: Makevars.in  Makevars.win.in  init.c  winitPumpRPackage-win.def  winitRPackage-win.def
src/rust/: Cargo.toml  api.h
src/rust/src/: external_window_controller.rs  lib.rs  main.rs  server.rs  spawned.rs  spawned_window_controller.rs  window.rs
src/rust/winit_r_package/: Cargo.toml
src/rust/winit_r_package/src/: external_window_controller.rs  lib.rs  spawned_window_controller.rs  spawned_window_controller_dummy.rs
src/rust/winit_r_package_server/: Cargo.toml
src/rust/winit_r_package_server/src/: main.rs
src/rust/winit_r_package_shared/: Cargo.toml
src/rust/winit_r_package_shared/src/: lib.rs  window.rs
