[package]
name = "winit_r_package"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[[bin]]
name = "server"
path = "bin/server.rs"

[features]
default = ["winit"]
no_winit = []

[dependencies]
ipc-channel = "0.18.3"
savvy = "*"
winit = { version = "0.30.5", optional = true }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery. 
# 
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
# 
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "abort"
