[workspace]
members = [
    "winit_r_package",
    "winit_r_package_shared",
    "winit_r_package_server",
]
resolver = "2"

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery. 
# 
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
# 
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "abort"

[patch.crates-io]
objc2-app-kit = { git = "https://github.com/madsmtm/objc2" }
