[package]
name = "winit_r_package"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[features]
default = []
use_winit = ["winit", "winit_r_package_shared/winit"]

[dependencies]
ipc-channel = "0.18.3"
savvy = "*"
winit = { version = "0.30.5", optional = true }
winit_r_package_shared = { path = "../winit_r_package_shared" }
